kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/requires1.sem

// Empty requires block

struct Foo {
  a: Integer
  requires {

  }
}
